<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('notifications', function (Blueprint $table) {
            $table->uuid('id')->primary();
            $table->enum('target_type', ['CLIENT', 'INFLUENCER', 'STORE', 'SHIPPING_COMPANY', 'SHIPPING_EMP', 'USER']);
            $table->foreignUuid('target_id')->constrained('users')->onDelete('cascade');
            $table->string('title');
            $table->string('link')->nullable();
            $table->text('message');
            $table->boolean('is_read')->default(false);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('notifications');
    }
};