<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('reports', function (Blueprint $table) {
            $table->uuid('id')->primary();
            $table->foreignUuid('reporter_id')->constrained('users')->onDelete('cascade');
            $table->foreignUuid('reported_user_id')->nullable()->constrained('users')->onDelete('cascade');
            $table->foreignUuid('reported_product_id')->nullable()->constrained('products')->onDelete('cascade');
            $table->text('description');
            $table->enum('status', ['PENDING', 'RESOLVED'])->default('PENDING');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('reports');
    }
};